--- a/socialmedia/templates/registration/profilepage.html
+++ b/socialmedia/templates/registration/profilepage.html
@@ -1,182 +1,213 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Profile</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Profile</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <!-- Favicons -->
+    <link href="{% static 'assets/img/favicon.png' %}" rel="icon" />
+    <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
 
-  <!-- Vendor CSS Files -->
-  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
-  <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
-  
+    <!-- Main CSS File -->
+    <link href="{% static 'assets/css/main.css' %}" rel="stylesheet" />
 
-  <!-- Main CSS File -->
-  <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
-
-  <!-- =======================================================
+    <!--   =======================================================
   * Template Name: iPortfolio
   * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
   * Updated: Jun 29 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
+  ========================================================   -->
+  </head>
 
-<body class="index-page">
+  <body class="index-page">
+    <!-- Header Section -->
+    <header id="header" class="header dark-background d-flex flex-column">
+      <i class="header-toggle d-xl-none bi bi-list"></i>
 
-  <!-- Header Section -->
-  <header id="header" class="header dark-background d-flex flex-column">
-    <i class="header-toggle d-xl-none bi bi-list"></i>
-
-    <!-- Profile Image -->
-    <div class="profile-img">
-      {% if data.profile_picture %}
-        <img src="{{ data.profile_picture.url }}" class="img-fluid rounded-circle" alt="Profile Picture">
-      {% endif %}
-    </div>
-
-    <!-- Profile Name / Logo -->
-    <a href="{% url 'home_page' %}" class="logo d-flex align-items-center justify-content-center">
-      {% comment %} <h1 class="sitename">{{ data.user.first_name }} {{data.user.last_name}}</h1> {% endcomment %}
-      <h1>{{ data.user.username }}</h1>
-    </a>
-
-    <!-- Social Links -->
-    <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-google"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-    </div>
-
-    <!-- Navigation Menu -->
-    <nav id="navmenu" class="navmenu">
-      <ul>
-        <li><a href="{% url 'home_page' %}"><i class="bi bi-house navicon"></i> Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="{% url 'blog_list' %}"><i class="bi bi-journal-text navicon"></i> Blog</a></li>
-        <li><a href="{% url "my_blog" %}"><i class="bi bi-journal-text navicon"></i> My Blog</a></li>
-        <li><a href="{% url "update_profile" %}"><i class="bi bi-person navicon"></i> Update Profile</a></li>
-        <li><a href="{% url "create_post" %}"><i class="bi bi-journal-text navicon"></i> Create Post</a></li>
-        <li><a href="{% url 'logout' %}"><i class="bi bi-person navicon"></i> LogOut</a></li>
-        <li><a href="{% url "change_password" %}"><i class="bi bi-journal-text navicon"></i> Change Password</a></li>
-        <li><a href="{% url "user_list" %}"><i class="bi bi-person navicon"></i> Request</a></li>
-        <li><a href="{% url "follow_requests" %}"><i class="bi bi-person navicon"></i> Follow Requests</a></li>
-
-      </ul>
-    </nav>
-  </header><!-- End Header -->
-
-  <!-- Main Content -->
-  <main class="main">
-
-    <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
-      {% comment %} <img src="{% static 'assets/img/hero-bg.jpg' %}" alt="" data-aos="fade-in" class="img-fluid"> {% endcomment %}
-      <img src="{{ data.profile_picture.url }}" class="card-img-top blog-image" alt="Profile Picture">
-
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        {% comment %} <h2>{{ data.user.first_name }} {{data.user.last_name}}</h2> {% endcomment %}
-        <h2>{{ data.user.username }}</h2>
-
-        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">{{ data.bio }}</span></p>
+      <!-- Profile Image -->
+      <div class="profile-img">
+        {% if data.profile_picture %}
+          <img src="{{ data.profile_picture.url }}" class="img-fluid rounded-circle" alt="Profile Picture" />
+        {% endif %}
       </div>
-    </section><!-- End Hero Section -->
 
-    <!-- About Section -->
-    <section id="about" class="about section">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>{{ data.bio }}</p>
-      </div><!-- End Section Title -->
+      <!-- Profile Name / Logo -->
+      <a href="{% url 'home_page' %}" class="logo d-flex align-items-center justify-content-center">
+        {% comment %} <h1 class="sitename">{{ data.user.first_name }} {{ data.user.last_name }}</h1> {% endcomment %}
+        <h1>{{ data.user.username }}</h1>
+      </a>
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            {% comment %} <img src="{% static 'assets/img/my-profile-img.jpg' %}" class="img-fluid" alt="Profile"> {% endcomment %}
-            <img src="{{ data.profile_picture.url }}" class="img-fluid" alt="Profile Picture">
-          </div>
-          <div class="col-lg-8 content">
-            <h2>Designer &amp; Web Developer</h2>
-            <p class="fst-italic py-3">{{ data.bio }}</p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{ data.birth_date }}</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{ data.location }}</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>{{ data.user.email }}</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
+      <!-- Social Links -->
+      <div class="social-links text-center">
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bi bi-google"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
+
+      <!-- Navigation Menu -->
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li>
+            <a href="{% url 'home_page' %}"><i class="bi bi-house"></i><span class="ms-2">Home</span></a>
+          </li>
+          <li>
+            <a href="#about"><i class="bi bi-info-circle"></i><span class="ms-2">About</span></a>
+          </li>
+          <li>
+            <a href="{% url 'blog_list' %}"><i class="bi bi-journal-text"></i><span class="ms-2">Blog</span></a>
+          </li>
+          <li>
+            <a href="{% url 'my_blog' %}"><i class="bi bi-pencil-square"></i><span class="ms-2">My Blog</span></a>
+          </li>
+          <li>
+            <a href="{% url 'update_profile' %}"><i class="bi bi-person-circle"></i><span class="ms-2">Update Profile</span></a>
+          </li>
+          <li>
+            <a href="{% url 'create_post' %}"><i class="bi bi-pencil-fill"></i><span class="ms-2">Create Post</span></a>
+          </li>
+          <li>
+            <a href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i><span class="ms-2">LogOut</span></a>
+          </li>
+          <li>
+            <a href="{% url 'change_password' %}"><i class="bi bi-lock-fill"></i><span class="ms-2">Change Password</span></a>
+          </li>
+          <li>
+            <a href="{% url 'user_list' %}"><i class="bi bi-people"></i><span class="ms-2">Request</span></a>
+          </li>
+          <li>
+            <a href="{% url 'follow_requests' %}"><i class="bi bi-bell"></i><span class="ms-2">Follow Requests</span></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- End Header -->
+
+    <!-- Main Content -->
+    <main class="main">
+      <!-- Hero Section -->
+      <section id="hero" class="hero section dark-background">
+        {% comment %} <img src="{% static 'assets/img/hero-bg.jpg' %}" alt="" data-aos="fade-in" class="img-fluid" /> {% endcomment %}
+        <img src="{{ data.profile_picture.url }}" class="card-img-top blog-image" alt="Profile Picture" />
+
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+          {% comment %} <h2>{{ data.user.first_name }} {{ data.user.last_name }}</h2> {% endcomment %}
+          <h2>{{ data.user.username }}</h2>
+
+          <p>
+            I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">{{ data.bio }}</span>
+          </p>
+        </div>
+      </section>
+      <!-- End Hero Section -->
+
+      <!-- About Section -->
+      <section id="about" class="about section">
+        <div class="container section-title" data-aos="fade-up">
+          <h2>About</h2>
+          <p>{{ data.bio }}</p>
+        </div>
+        <!-- End Section Title -->
+
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+          <div class="row gy-4 justify-content-center">
+            <div class="col-lg-4">
+              {% comment %} <img src="{% static 'assets/img/my-profile-img.jpg' %}" class="img-fluid" alt="Profile" /> {% endcomment %}
+              <img src="{{ data.profile_picture.url }}" class="img-fluid" alt="Profile Picture" />
             </div>
-            <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-            </p>
+            <div class="col-lg-8 content">
+              <h2>Designer &amp; Web Developer</h2>
+              <p class="fst-italic py-3">{{ data.bio }}</p>
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul>
+                    <li>
+                      <i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{ data.birth_date }}</span>
+                    </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span>
+                    </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span>
+                    </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{ data.location }}</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul>
+                    <li>
+                      <i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>{{ data.user.email }}</span>
+                    </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <p class="py-3">Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis. Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.</p>
+            </div>
           </div>
         </div>
+      </section>
+      <!-- End About Section -->
+    </main>
+    <!-- End Main Content -->
+
+    <!-- Footer Section -->
+    <footer id="footer" class="footer position-relative light-background">
+      <div class="container">
+        <div class="copyright text-center">
+          <p>
+            © <strong class="sitename">iPortfolio</strong> All Rights Reserved
+          </p>
+        </div>
+        <div class="credits">
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
       </div>
-    </section><!-- End About Section -->
+    </footer>
+    <!-- End Footer -->
 
-  </main><!-- End Main Content -->
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Footer Section -->
-  <footer id="footer" class="footer position-relative light-background">
-    <div class="container">
-      <div class="copyright text-center">
-        <p>© <strong class="sitename">iPortfolio</strong> All Rights Reserved</p>
-      </div>
-      <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+    <!-- Preloader -->
+    <div id="preloader"></div>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <!-- Vendor JS Files -->
+    <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+    <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
+    <script src="{% static 'assets/vendor/typed.js/typed.umd.js' %}"></script>
+    <script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
+    <script src="{% static 'assets/vendor/waypoints/noframework.waypoints.js' %}"></script>
+    <script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
 
-  <!-- Preloader -->
-  <div id="preloader"></div>
-
-  <!-- Vendor JS Files -->
-  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
-  <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
-  <script src="{% static 'assets/vendor/typed.js/typed.umd.js' %}"></script>
-  <script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
-  <script src="{% static 'assets/vendor/waypoints/noframework.waypoints.js' %}"></script>
-  <script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
-
-  <!-- Main JS File -->
-  <script src="{% static 'assets/js/main.js' %}"></script>
-
-</body>
-
+    <!-- Main JS File -->
+    <script src="{% static 'assets/js/main.js' %}"></script>
+  </body>
 </html>
